[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "igelfs"
description = "Python implementation of the IGEL filesystem."
version = "1.4.1"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
  {name = "Zack Didcott"}
]
maintainers = [
  {name = "Zack Didcott"}
]
dependencies = [
  "pillow",
  "rsa",
]
requires-python = ">= 3.10"

[project.optional-dependencies]
convert = ["pyparted"]
tests = [
  "pytest",
  "python-magic",
]

[project.urls]
Homepage = "https://github.com/Zedeldi/igelfs"

[tool.isort]
profile = "black"

[tool.mypy]
enable_error_code = [
  "ignore-without-code"
]
show_error_codes = true
warn_unused_ignores = true

[tool.pytest.ini_options]
markers = [
    "inf: tests require LXOS configuration file"
]
